--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy": "node cors-proxy.js",
+    "start": "npm run proxy & npm run preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "openai": "^4.0.0",
     "vue": "^3.3.4"
   },
